cabal-version:       2.0
name:                fused-effects-async
version:             0.0.0.0
synopsis:            Fused-effects wrappers for async and concurrent execution of IO actions.
description:         Fused-effects wrappers for async and concurrent execution of IO actions.
homepage:            https://github.com/patrickt/fused-effects-async
bug-reports:         https://github.com/patrickt/fused-effects-async/issues
license:             BSD3
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          patrickt@github.com
copyright:           2020 Patrick Thomson
category:            Control
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.1

source-repository head
  type:                git
  location:            https://github.com/patrickt/fused-effects-async.git

library
  hs-source-dirs:      src
  exposed-modules:     FusedEffectsAsync
                       

  build-depends:       base ^>= 4.13.0.0
                     

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010

test-suite fused-effects-async-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base ^>= 4.13.0.0
                     , fused-effects-async
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010
